eureka/kxl-eureka.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  namespace: kube-dev
  labels:
    app: eureka
spec:
  ports:
  - port: 8761
    name: eureka
  clusterIP: None
  selector:
    app: eureka
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: eureka
  namespace: kube-dev
spec:
  serviceName: "eureka"
  replicas: 3
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image:  docker.io/xxlaila/kxl-eureka:v2
        ports:
        - containerPort: 8761
  podManagementPolicy: "Parallel"
