eureka/eureka-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eureka-ingress
  namespace: kube-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  rules:
  - host: eureka.zxc.com
    http:
      paths:
      - backend:
          serviceName: eureka
          servicePort: 8761
